# cmasmasproyectos

CalcularMultiplicarConTranspuestaVersionRecursiva/: CMakeLists.txt  main.cpp
CalcularPotenciasDeUnaMatriz/: CMakeLists.txt  main.cpp
CollatzConjeture/: main.cpp
TPI/: CMakeLists.txt  auxiliares.cpp  main.cpp  solucion.cpp
TPI/tests/: completarTEST.cpp  ctrlfTEST.cpp  distanciaAcordeonTEST.cpp  distanciaEuclidianaTEST.cpp  esValidaTEST.cpp  histogramaTEST.cpp  maximoTEST.cpp  mediaTEST.cpp  medianaEnteraTEST.cpp  sacarOutliersTEST.cpp  slidingWindowsTEST.cpp
hallarCantidadDeAparicionesEnUnaMatriz/: CMakeLists.txt  main.cpp
hallarValleMenorRecursivo/: CMakeLists.txt  main.cpp
laboratorio2/taller2_abb/alumnos/src/: Conjunto.h  Conjunto.hpp
laboratorio2/taller2_abb/alumnos/tests/: conjunto-tests.cpp
tp2/: auxiliares.h  definiciones.h  ejercicios.h  main.cpp
